Correccion de pruebas y mejora de cobertura